cmake_minimum_required(VERSION 3.22)
project(untitled C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-fexec-charset=CP949")

set(CMAKE_C_STANDARD 99)

#add_executable(day0524class day0524class.c)
#add_executable(day0529class day0529class.c)
#add_executable( day053101  day053101.c)
#add_executable(day053101 day053101.c day053102.c)
#add_executable(day053102 day053102.c)
#add_executable(day060701 day060701.c)
#add_executable(day060702 day060702.c)
#add_executable(cmake-build-debug_day060703 cmake-build-debug/day060703.cpp)